Contar os usuários por CPF ou email.
