# src/routes/user.js
@@ -2,5 +2,6 @@ const router = require('express').Router();
 const { userController } = require('../controllers/index');
 
 router.post('/', userController.create);
+router.get('/count', userController.count);
 
 module.exports = router;
